fix docker setup

--- a/budget-app/appsettings.json
+++ b/budget-app/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "User ID=postgres;Password=pass;Server=localhost;Port=5432;Database=budget;Integrated Security=true;Pooling=true;"
+    "db": "Host=db;Port=5432;Database=budget;Username=postgres;Password=pass;"
   }
 }
